lox-tests/tests/print/missing_argument.stderr
ERROR: at ';': Expected expression, got Semicolon
 --> 2:6
  |
2 | print;
  |      ^
